--- a/WebApi/WebApiShop/Services/Services.csproj
+++ b/WebApi/WebApiShop/Services/Services.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0" />
+    <PackageReference Include="MailKit" Version="4.15.0" />
     <PackageReference Include="zxcvbn-core" Version="8.0.0-beta0002" />
   </ItemGroup>
 
