--- a/WebApi/WebApiShop/WebApiShop/appsettings.json
+++ b/WebApi/WebApiShop/WebApiShop/appsettings.json
@@ -10,11 +10,14 @@
     "EfratHome": "Server=localhost;Database=DashGen2026;Trusted_Connection=True;TrustServerCertificate=True;"
   },
   "GeminiSettings": {
-    "ApiKey": "AIzaSyBwiSYbhT8-FqHYVEObO6wv4XiaDBn_jM4",
-    "BaseUrl": "https://generativelanguage.googleapis.com/v1/models/gemini-1.5-flash:generateContent"
+    "BaseUrl": "https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash:generateContent"
   },
   "AdminCredentials": {
     "Username": "dashgen2026@gmail.com",
     "Password": "yaffi&efrat2026"
+  },
+  "EmailSettings": {
+    "FromEmail": "dashgen26@gmail.com",
+    "AppPassword": "iqrptdsiikeofqti"
   }
 }
