--- a/WebApi/WebApiShop/WebApiShop/appsettings.json
+++ b/WebApi/WebApiShop/WebApiShop/appsettings.json
@@ -17,7 +17,7 @@
     "Password": "yaffi&efrat2026"
   },
   "EmailSettings": {
-    "FromEmail": "dashgen26@gmail.com",
+    "FromEmail": "yafi3155816@gmail.com",
     "AppPassword": "iqrptdsiikeofqti"
   }
 }
